aimewdews fb funciona

--- a/Lixo-Mestre/Lixo-Mestre-Info.plist
+++ b/Lixo-Mestre/Lixo-Mestre-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.ezefranca.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>lixo.papao</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -25,16 +25,16 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb1494009864188916</string>
+				<string>fb695963103821364</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>FacebookAppID</key>
-	<string>1494009864188916</string>
+	<string>695963103821364</string>
 	<key>FacebookDisplayName</key>
-	<string>lixoPapao</string>
+	<string>Lixo Mestre</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
