--- a/Lixo-Mestre/Lixo-Mestre-Info.plist
+++ b/Lixo-Mestre/Lixo-Mestre-Info.plist
@@ -8,6 +8,15 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>Icon.png</string>
+		<string>Icon@2x.png</string>
+		<string>Icon-72.png</string>
+		<string>Icon-Small-50.png</string>
+		<string>Icon-Small.png</string>
+		<string>Icon-Small@2x.png</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>lixo.papao</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -35,12 +44,12 @@
 	<string>1494009864188916</string>
 	<key>FacebookDisplayName</key>
 	<string>lixoPapao</string>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>santor 1.002.otf</string>
 	</array>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>LixoPapao</string>
 	<key>UIRequiredDeviceCapabilities</key>
